--- a/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/filters/filters.scss
+++ b/x-pack/plugins/lens/public/indexpattern_datasource/operations/definitions/filters/filters.scss
@@ -1,9 +1,6 @@
-
 .lnsFiltersOperation__popoverButton {
+  @include euiTextBreakWord;
+  @include euiFontSizeS;
   min-height: $euiSizeXL;
   width: 100%;
-
-  .lnsFiltersOperation__popoverButtonContent {
-    justify-content: flex-start;
-  }
 }
